# video-downloader-pro

./: .clang-format  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  readme.md  setup.py
.github/workflows/: build.yml  test.yml
scripts/: build_exe.py
src/: __init__.py  main.py
tests/: __init__.py  conftest.py  test_main.py
