[project]
name = "videodownloader"
version = "0.1.0"
description = "Video Downloader Pro"
readme = "README.md"
license = {text = "MIT"}  # или просто "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    # Удалите "License :: OSI Approved :: MIT License"
]
